Bug 85750 - EDITING Custom Animation timing does not retain settings
Summary: EDITING Custom Animation timing does not retain settings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.6.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.4.0 target:4.3.5
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-02 05:50 UTC by Gregor
Modified: 2014-11-13 17:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gregor 2014-11-02 05:50:54 UTC
Problem description: Motion paths do not repeat

Steps to reproduce:
1. Start Impress 
2. Create an object (e.g. a rectangle), with the object selected:
3. From the objects context menu or the "Slide Show" menu choose "Custom Animation"
4. Click the [+] to add an effect
5. Choose the "Motion paths" tab 
6. Select a motion patn (I tried both "Arc Down" and "Freeform")
   6a. If "Freeform", draw the path
7. Select the [...] button and the "Timing" tab of the effects properties (or right-click the motion path item in the Custom Animation pane and choose "Timing")
8. Choose a number in the "Repeat dropdown list" (I tried 2, 3, and "Until next click)
9. Click OK
10 Reopen the "Timing" tab of the custom animation effect.
   

Current behavior:
The "Repeat" 3 has reverted to "none"
"Until next click" remains but the slide progresses to the next slide (or the slideshow ends if it is the last slide)

Expected behavior:
The "Repeat" has remained as set and when tested (the slideshow run) the effect will repeat the number of times set.
Comment 1 Julien Nabet 2014-11-02 10:40:02 UTC
For the test, could you give a try to the last stable LO version 4.3.3?
Comment 2 Gregor 2014-11-02 19:49:50 UTC
Bug also exists in 4.3.3.2 (on Windows7)
Comment 3 Julien Nabet 2014-11-02 21:33:59 UTC
Thank you for your feedback, I could confirm the bug too on pc Debian x86-64 with  master sources updated today.
Comment 4 Gregor 2014-11-03 05:40:13 UTC
This bug though not critical has been around for years. The inability of Impress to do motion paths is one of the prime reasons I cannot use Impress and have to resort to PowerPoint.
Comment 5 Julien Nabet 2014-11-03 06:41:08 UTC
I noticed that when I select "Until next click" or "Until end of slide", it worked.

Code pointer: http://opengrok.libreoffice.org/xref/core/sd/source/ui/animations/CustomAnimationDialog.cxx#1770
Comment 6 Gregor 2014-11-03 06:53:03 UTC
"Until next click" and "Until end of slide does NOT work for me.
1. Start Impress 
2. Create a rectangle
3. From the objects context menu choose "Custom Animation"
4. Click the [+] to add an effect
5. Choose the "Motion paths" tab 
6. Select the "Diamond" motion path 
7. Right-click the motion path item in the Custom Animation pane and choose "Timing")
8. Choose "Until end of slide")
9. Click OK
10 Hit [F5] (run slideshow)

Current behavior:
Diamond path is followed ONCE. Subsequent click (or [Enter]) moves to next slide (terminates the slideshow if this is the only or last slide)

Expected behavior:
Diamond path is repeated untill next slide.

The setting DOES persist in the "Timing"; "Repeat" combobox (unlike a selected number of repeats) but, for me, the action does not continue as expected.
Comment 7 Julien Nabet 2014-11-03 07:19:55 UTC
Gregor: Indeed, I hadn't tested the result, I just meant the fact that the option remained in dialog.

Thorsten: one for you?
Comment 8 Julien Nabet 2014-11-03 22:32:02 UTC
I submitted a patch for review here:
https://gerrit.libreoffice.org/#/c/12236/

With it, repeat 2, 3, 4, 5 and 10 works.
For the 2 other options, I'm not sure to the purpose of them and found nothing about it.
Comment 9 Gregor 2014-11-04 05:12:12 UTC
It appears that the patches are for a mac which I dont have. (I am not sure the "review was ment for me either and don't know how to proceede anyway)
The purpose of the "Until next click" is for the path to repeat until the left mouse button is clicked (or the [Enter] key hit.
The purpose for the "Until end of slide" is for the effect to perpetuate irrespective of mouse clicks until the slide is switched.
Comment 10 Julien Nabet 2014-11-04 06:31:43 UTC
Gregor: the patch put in review (not meant for you but for the LO dev community) isn't specific for Mac. Indeed, I'm on Linux Debian and the patch works for me.

For the rest, I'd like to find some official LO doc. I mean, how do you know what should be the real effect of these 2 options? Don't misunderstand me, I don't say you're wrong about them, I'm just saying that I find no official doc for them (perhaps I missed them).
Comment 11 Gregor 2014-11-04 07:12:02 UTC
OK (I was wondering if you expected me to somhow install a patch and test). 
I have not seen any LO documentation on the "Until..." options either I'm just guessing here that these functions are named logically (I would like to use them that way)
 :)

​​
At:
wiki.documentfoundation.org/images/a/ac/IG40-ImpressGuideLO.pdf
On page 210 I read:
Repeat – specifies whether and how to repeat the current effect. Enter the number of 
repeats, or select from the list:
– (none) – the effect is not repeated.
– Until next click – the animation is repeated until the next mouse click.
– Until end of slide – the animation repeats as long as the slide is displayed.

(As I suspected)
Comment 12 Commit Notification 2014-11-13 16:14:33 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=236819ecfa38360aa72d1061808b20204a0af594

Resolves fdo#85750: Custom Animation timeing does not retain settings

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Julien Nabet 2014-11-13 16:59:01 UTC
For information, thanks to Caolan, the patch has been improved and pushed on master sources (future 4.4.0).
For 4.3 branch, there's https://gerrit.libreoffice.org/#/c/12410/
The review is in progress, indeed another dev must validate it. It should be ok for 4.3.5 (since I think it's too late for next release 4.3.4)