Resolves fdo#85750: Custom Animation timeing does not retain settings

Change-Id: Id6bbd113630348493ed1e67da72c7a42c5188b44